Fix hero images to fit within screen without scrollbar

--- a/assets/less/homepage.less
+++ b/assets/less/homepage.less
@@ -9,6 +9,7 @@
   background: url(img/lemon-scented-lawns.jpg) bottom left no-repeat;
   height: @feature-image-height-sm;
   width: 100vw;
+  max-width: 100%;
   overflow: hidden;
   background-size: cover;
   position: relative;
