--- a/assets/less/join.less
+++ b/assets/less/join.less
@@ -8,6 +8,7 @@
   height: @join-image-height-sm;
   background: url(img/join-wired-3.jpg) bottom center no-repeat;
   width: 100vw;
+  max-width: 100%;
   overflow: hidden;
   background-size: cover;
   position: relative;
